Added Elaborate Personas

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -107,11 +107,50 @@ Beyond the primary stakeholders, other key groups that benefit from high-quality
 \subsection{Hands-On Users of the Project}
 Users: These are individuals or entities responsible for labeling the data on the platform. In return for their efforts, they receive compensation. Their primary role is to ensure that the datasets are correctly annotated according to specified requirements, which forms the basis of the models developed. Their work directly impacts the quality and usability of the final product.
 
-\subsection{Personas}
+\section{Personas}
 \begin{itemize}
-    \item \textbf{Air Rescue Analysts:} Use satellite imagery to assist in disaster management.
-    \item \textbf{Financial Data Analysts:} Utilize satellite data for economic trend analysis.
-    \item \textbf{Farmers/Agricultural Managers:} Monitor crop health, soil conditions, and weather for precision farming.
+    \item \textbf{Independent Data Annotators}
+    \begin{itemize}
+        \item \textbf{Description}: These are freelancers or part-time workers with some technical skills but little formal background in satellite imagery. They are responsible for labeling the satellite images provided on the platform.
+        \item \textbf{Goals}: Complete labeling tasks quickly and accurately to maximize earnings and maintain a good reputation on the platform.
+        \item \textbf{Challenges}: Limited domain knowledge about satellite data, difficulty in understanding complex labeling guidelines, and maintaining speed without sacrificing accuracy.
+        \item \textbf{Needs}: Clear, user-friendly labeling tools, detailed guidelines, examples for training, and a feedback loop to improve their work quality.
+    \end{itemize}
+    \item \textbf{Local Environmental Monitors}
+    \begin{itemize}
+        \item \textbf{Description}: Local organizations or small environmental NGOs that use satellite data to monitor nearby ecosystems, track deforestation, or assess environmental degradation. They rely on affordable, easy-to-access datasets.
+        \item \textbf{Goals}: Obtain accurate data on environmental changes in their local area to support conservation efforts or report on environmental impacts.
+        \item \textbf{Challenges}: Lack of technical expertise in interpreting satellite data, a need for affordable solutions, and a dependence on pre-labeled data for quick analysis.
+        \item \textbf{Needs}: Simplified tools for analyzing labeled satellite data, datasets that are easy to interpret without deep technical knowledge, and support for regional environmental concerns.
+    \end{itemize}
+    \item \textbf{Urban Development Analysts (Small Municipal Teams)}
+    \begin{itemize}
+        \item \textbf{Description}: Small urban planning teams in municipalities, often composed of only a few individuals, who use satellite imagery to plan local infrastructure projects or monitor land usage.
+        \item \textbf{Goals}: Identify areas for potential development, assess land-use changes, and ensure that urban growth aligns with city plans.
+        \item \textbf{Challenges}: Limited resources for purchasing datasets, difficulties in interpreting complex satellite imagery, and a need for user-friendly tools that allow for quick decision-making.
+        \item \textbf{Needs}: Affordable, accurate data, easy-to-navigate analysis tools, and region-specific datasets that provide insights into urban growth and land-use patterns.
+    \end{itemize}
+    \item \textbf{Agricultural Cooperatives}
+    \begin{itemize}
+        \item \textbf{Description}: Small-scale farming groups or agricultural cooperatives that rely on satellite data to monitor crop health, soil conditions, and optimize resource usage.
+        \item \textbf{Goals}: Improve crop yields, manage water and fertilizer usage efficiently, and identify early signs of crop stress.
+        \item \textbf{Challenges}: Limited technical understanding of satellite data, difficulty in accessing real-time data, and a lack of granular, localized data for their specific farming regions.
+        \item \textbf{Needs}: Simple dashboards that show actionable insights (e.g., crop health indicators), labeled data that is relevant to agricultural decision-making, and tools that provide early warning signs of potential issues.
+    \end{itemize}
+    \item \textbf{Disaster Response Volunteers (Local Level)}
+    \begin{itemize}
+        \item \textbf{Description}: Volunteers and small NGOs that assist in post-disaster assessments by using satellite imagery to evaluate damage to infrastructure, land, and homes.
+        \item \textbf{Goals}: Rapidly assess the extent of damage and prioritize areas that need immediate relief and rebuilding efforts.
+        \item \textbf{Challenges}: Limited resources, a lack of expertise in interpreting satellite data, and a dependence on accurate, pre-labeled datasets to understand the scope of the disaster.
+        \item \textbf{Needs}: Simple tools that allow for quick damage assessments, access to accurate and recent satellite images, and region-specific data to support localized relief efforts.
+    \end{itemize}
+    \item \textbf{Platform Maintenance Technicians}
+    \begin{itemize}
+        \item \textbf{Description}: These users are technical support staff responsible for maintaining the functionality of the labeling platform and ensuring the labeling tools run smoothly for annotators.
+        \item \textbf{Goals}: Minimize downtime, provide timely assistance to data labelers, and ensure that the labeling interface is bug-free.
+        \item \textbf{Challenges}: Managing multiple technical issues at once, keeping the platform up-to-date without disrupting users, and ensuring a smooth user experience for data labelers.
+        \item \textbf{Needs}: Access to detailed logs and system diagnostics, tools for quickly identifying and resolving platform issues, and efficient communication channels to address user concerns.
+    \end{itemize}
 \end{itemize}
 
 \subsection{Priorities Assigned to Users}
