--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -6,6 +6,7 @@
 \usepackage{multirow}
 \usepackage{float}
 \usepackage{longtable}
+\usepackage{url}
 
 \hypersetup{
     colorlinks=true,       % false: boxed links; true: colored links
@@ -350,5 +351,23 @@ Which requirements will be implemented in the future?}
     appreciable risks of this form), list at least 2 other types of risk in
     software products. Why are they important to consider?
 \end{enumerate}
+
+\section{References}
+\sloppy
+
+\begin{itemize}
+    \item OWASP. Cross-Site Scripting (XSS). Available at: \url{https://owasp.org/www-community/attacks/xss/}.
+    \item The SSL Store. The Ultimate Guide to Session Hijacking (aka Cookie Hijacking). Available at: \url{https://www.thesslstore.com/blog/the-ultimate-guide-to-session-hijacking-aka-cookie-hijacking/}.
+    \item Mozilla Developer Network. Content Security Policy (CSP). Available at: \url{https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP}.
+    \item Neontri. PCI DSS Compliance. Available at: \url{https://neontri.com/blog/pci-dss-compliance/}.
+    \item Imperva. Session Hijacking. Available at: \url{https://www.imperva.com/learn/application-security/session-hijacking/}.
+    \item Label Your Data. Bias in Machine Learning. Available at: \url{https://labelyourdata.com/articles/bias-in-machine-learning}.
+    \item Reversing Labs. How to Harden ML Models Against Adversarial Attacks. Available at: \url{https://www.reversinglabs.com/blog/how-to-harden-ml-models-against-adversarial-attacks}.
+    \item Hyperopt GitHub Issues. Hyperopt Version Conflicts. Available at: \url{https://github.com/hyperopt/hyperopt/issues/642}.
+    \item HiddenLayer. What's in the Box? Understanding Adversarial Attacks on ML Models. Available at: \url{https://hiddenlayer.com/research/whats-in-the-box/}.
+    \item Medium. Python Security Best Practices for Writing Secure Code. Available at: \url{https://medium.com/@VAISHAK_CP/python-security-best-practices-for-writing-secure-code-a6a9130e3748}.
+    \item Docker Documentation. Seccomp Security Profiles. Available at: \url{https://docs.docker.com/engine/security/seccomp/}.
+\end{itemize}
+\sloppy
 
 \end{document}
