--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -105,7 +105,7 @@ this potential failure mode.}
   Email is duplicated &
   \begin{tabular}[c]{@{}l@{}}Compare the email \\ entered with the user \\ database records\\ to see if the email is in use\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Notify the user that the email \\ is associated with another\\  account\\ \\ Prompt them to give another \\ email or sign in with the one \\ they entered\end{tabular} &
-   &
+   SE2 &
   H1-1 \\ \cline{2-8} 
  &
   \begin{tabular}[c]{@{}l@{}}Invalid input \\ syntax and \\ length\end{tabular} &
@@ -113,7 +113,7 @@ this potential failure mode.}
   \begin{tabular}[c]{@{}l@{}}1) Email is not valid\\ 2) Password is not \\ strong enough\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}1) Use regular expressions \\ to  detect if the string \\ pattern  is valid\\ 2) Use regular expressions \\ to detect if all password \\ requirements are met\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}1) Notify the user that they must\\ enter a valid email and give an \\ example of a valid email\\ 2) Tell the user what password\\ requirements they have and \\ have not satisfied\end{tabular} &
-   &
+   SE2,3 &
   H1-2 \\ \hline
 \multirow{2}{*}{Log In} &
   \begin{tabular}[c]{@{}l@{}}Incorrect \\ credentials \\ entered\end{tabular} &
@@ -121,7 +121,7 @@ this potential failure mode.}
   \begin{tabular}[c]{@{}l@{}}1) No account with\\ the entered email\\ exists\\ 2) Password does\\ not match records\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}1) Compare email entered \\ with database records to \\ see if account exists\\ 2) Compare password \\ entered with what is stored \\ in the database for\\ the entered email\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}1) Tell user account does not\\ exist and prompt them to \\ make one\\ 2) Tell user password is incorrect\\ and prompt password recovery\end{tabular} &
-   &
+   SE0,1&
   H2-1 \\ \cline{2-8} 
  &
   \begin{tabular}[c]{@{}l@{}}Excessive \\ permissions \\ given\end{tabular} &
@@ -129,7 +129,7 @@ this potential failure mode.}
   \begin{tabular}[c]{@{}l@{}}Application paths\\ are unprotected\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Check user login token \\ each time a new page of \\ the website is accessed\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Tell the user to log in\\ \\ Deny access if they try to \\ access a \\ page they should not\end{tabular} &
-   &
+  SE0,1 &
   H2-2 \\ \hline
 \multirow{4}{*}{\begin{tabular}[c]{@{}l@{}}Labeling \\ Satallite \\ Images\end{tabular}} &
   \begin{tabular}[c]{@{}l@{}}Internet \\ connection \\ is lost\end{tabular} &
@@ -137,7 +137,7 @@ this potential failure mode.}
   \begin{tabular}[c]{@{}l@{}}Internet connection\\ is weak or power\\ is lost\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Device shows no internet\\ connection\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Any labeled photos or created \\ projects that have already been\\ submitted have been saved\\ \\ Progress is resumed when \\ connection is re-established\end{tabular} &
-   &
+   SE4&
   H3-1 \\ \cline{2-8} 
  &
   \begin{tabular}[c]{@{}l@{}}Application is \\ closed\end{tabular} &
@@ -145,7 +145,7 @@ this potential failure mode.}
   \begin{tabular}[c]{@{}l@{}}Power outage or\\ misclick\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Application is no longer \\ running on the users \\ device\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Any labeled photos or created\\ projects that have already been\\ submitted have been saved\\ \\ Progress is resumed on log in\end{tabular} &
-   &
+   SE4&
   H3-2 \\ \cline{2-8} 
  &
   \begin{tabular}[c]{@{}l@{}}Unlabelled data \\ is submitted\end{tabular} &
@@ -153,7 +153,7 @@ this potential failure mode.}
   Misclick &
   \begin{tabular}[c]{@{}l@{}}On submission, \\ application checks that \\ there are as many\\ labels as requested \\ by the job\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Reject a submission if no \\ labeling was done\end{tabular} &
-   &
+  SE5 & 
   H3-3 \\ \cline{2-8} 
  &
   \begin{tabular}[c]{@{}l@{}}Mass labeling \\ done too quickly\end{tabular} &
@@ -161,7 +161,7 @@ this potential failure mode.}
   \begin{tabular}[c]{@{}l@{}}Bots have been\\ deployed to make\\ quick labels\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}User is submitting data \\ at an unreasonable \\ speed\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Implement a submission cool \\ down to prevent \\ bot submissions \\ \\ Reward system is based \\ on accuracy\end{tabular} &
-   &
+  SE5 &
   H3-4 \\ \hline
 \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Backend \\ Server \\ and \\ API \\ Requests\end{tabular}} &
   Server crashes &
@@ -169,7 +169,7 @@ this potential failure mode.}
   \begin{tabular}[c]{@{}l@{}}Software error on\\ server side\end{tabular} &
   Error found in logs &
   \begin{tabular}[c]{@{}l@{}}Monitor errors in logs\\ \\ Notify users that the \\ server is down\end{tabular} &
-   &
+   SE6&
   H4-1 \\ \cline{2-8} 
  &
   \begin{tabular}[c]{@{}l@{}}API is not \\ responding\end{tabular} &
@@ -177,7 +177,7 @@ this potential failure mode.}
   \begin{tabular}[c]{@{}l@{}}API service provider\\ is down or\\ overwhelmed\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Response from the \\ API has an error code\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Retry all API requests after a \\ specific amount of time\\ \\ Monitor errors in logs\end{tabular} &
-   &
+   SE6&
   H4-2 \\ \hline
 \multirow{3}{*}{Data Storage} &
   \begin{tabular}[c]{@{}l@{}}User account is\\ compromised\end{tabular} &
@@ -185,7 +185,7 @@ this potential failure mode.}
   \begin{tabular}[c]{@{}l@{}}Lack of encryption\\ and protection of\\ sensitive infomation\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}User notifies the team \\ of lost reward balance \\ or lost account access\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Ensure user passwords are \\ encrpyted when stored\\ \\ Ensure financial transactions \\ are secure\\ \\ Password reset occurs \\ through a trusted \\ source such as email\end{tabular} &
-   &
+   SE8,9 &
   H5-1 \\ \cline{2-8} 
  &
   \begin{tabular}[c]{@{}l@{}}Duplicate entry \\ occurs\end{tabular} &
@@ -193,7 +193,7 @@ this potential failure mode.}
   \begin{tabular}[c]{@{}l@{}}Lack of \\ constraints/validation\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Check the database \\ entries\end{tabular} &
   \begin{tabular}[c]{@{}l@{}}Ensure the database has \\ unique keys\\ \\ Set up a duplicate key \\ procedure on the\\ database\end{tabular} &
-   &
+  SE7 &
   H5-2 \\ \cline{2-8} 
  &
   \begin{tabular}[c]{@{}l@{}}Database is \\ compromised\end{tabular} &
@@ -201,7 +201,7 @@ this potential failure mode.}
   SQL injection &
   Check database entries &
   \begin{tabular}[c]{@{}l@{}}Use parameterized queries\\ \\ Avoid dynamic SQL strings\end{tabular} &
-   &
+  SE10 &
   H5-3 \\ \hline
 \end{longtable}
 
@@ -211,6 +211,29 @@ this potential failure mode.}
 
 \wss{Newly discovered requirements.  These should also be added to the SRS.  (A
 rationale design process how and why to fake it.)}
+
+\subsubsection*{NFR-SE4}
+\begin{itemize}
+  \item \textbf{Description:} The application shall prohibit new user actions when user is disconnected from the system.
+  \item \textbf{Rationale:} The system should avoid batch updates upon reconnect as to prevent malicious users creating a false package of updates.
+  \item \textbf{Fit Criterion:} Upon user disconnect and reconnect, the system will not accept any updates from the user not submitted before the disconnect occured.
+\end{itemize}
+
+\subsubsection*{NFR-SE6}
+\begin{itemize}
+  \item \textbf{Description:} The system shall, during system failure, notify users trying to make a request of the system failure.
+  \item \textbf{Rationale:} The system should provide good warning messages to users to prevent additional frustration.
+  \item \textbf{Fit Criterion:} When services are unavailable, the system shall provide an error message to the user making the request of the unavailable service.
+\end{itemize}
+
+\subsubsection*{NFR-SE7}
+\begin{itemize}
+  \item \textbf{Description:} The system shall reject duplicate entries in database.
+  \item \textbf{Rationale:} Each entry to the database should be a unique data piece. If two entries are identical, they must differ by at least the creation time.
+  \item \textbf{Fit Criterion:} No two entries in the database shall exist together for longer than 24 hours from their introduction into the database.
+\end{itemize}
+
+
 
 \section{Roadmap}
 
