--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -58,9 +58,9 @@ Date2 & Name(s) & Description of changes\\
 \wss{You are free to modify this template.}
 
 \section{Introduction}
-Test Text
-
-\wss{You can include your definition of what a hazard is here.}
+This document presents the hazard analysis for OrbitWatch, an online application that uses an AI-powered crowdsourcing model to build labeled satellite image datasets.
+A hazard in the context of our application is any condition or event that could lead to undesirable outcomes, such as system failures, data corruption, data leakage, performance degradation, or security vulnerabilities.
+This document aims to detect, analyze, and mitigate potential hazards that are applicable to our application.
 
 \section{Scope and Purpose of Hazard Analysis}
 
