Implement reviewer feedback

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -209,8 +209,7 @@ this potential failure mode.}
 
 \section{Safety and Security Requirements}
 
-\wss{Newly discovered requirements.  These should also be added to the SRS.  (A
-rationale design process how and why to fake it.)}
+A comprehensive list of requirements can be found in the \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/SRS/SRS.pdf}{SRS}.
 
 \subsubsection*{NFR-SE4}
 \begin{itemize}
