added kyle's reflection

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -40,9 +40,7 @@
 \toprule
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
-Date1 & Name(s) & Description of changes\\
-Date2 & Name(s) & Description of changes\\
-... & ... & ...\\
+October 25 & Kyle, Kartik, Mathew, Oleg & Rev 0\\
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -55,7 +53,6 @@ Date2 & Name(s) & Description of changes\\
 
 \pagenumbering{arabic}
 
-\wss{You are free to modify this template.}
 
 \section{Introduction}
 This document presents the hazard analysis for OrbitWatch, an online application that uses an AI-powered crowdsourcing model to build labeled satellite image datasets.
@@ -194,7 +191,7 @@ hazards.}
 minimize the number of assumptions that remove potential hazards.  For instance,
 you could assume a part will never fail, but it is generally better to include
 this potential failure mode.}
-
+\newpage
 \section{Failure Mode and Effect Analysis}
 
 \setlength\LTleft{-4.3cm}
@@ -320,7 +317,7 @@ this potential failure mode.}
 \end{longtable}
 
 \normalsize
-
+\newpage
 \section{Safety and Security Requirements}
 
 A comprehensive list of requirements can be found in the \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/SRS/SRS.pdf}{SRS}.
@@ -373,18 +370,40 @@ before exposing the system to a large pool of users. These requirements are rela
 \input{../Reflection.tex}
 
 \begin{enumerate}
-    \item What went well while writing this deliverable? sample text
+    \item What went well while writing this deliverable?\\
+    
+    \textbf{Kyle:} As a team, we have a lot more experience working with eachother and assigning tasks based on expertise. This showed during this stage of the project. We were able to
+    assign the tasks that could be completed independently so that our team meeting was focused on brainstorming the parts that would be better to work on together. Truthfully, we 
+    we unable to work much on this deliverable until midway through last week (with the exception of Mathew, who provided the team with the first iteration of the harzard table). If we 
+    didn't have the experience and trust in each other, it would have been much more stressful to ensure completion of this document.\\\\
     \item What pain points did you experience during this deliverable, and how
-    did you resolve them?
+    did you resolve them?\\\\
+    \textbf{Kyle:} As I discussed above, there was a real challenge for the team to allocate time towards this deliverable. The team had personal commitments over reading week
+    and 2/3 midterms in the first days back from reading week. We resolved them through a carefully planned team meeting, which was designed to gain alignment on any team decisions
+    early in the week, so that the team could complete their assigned work when they had time to spare.\\\\
     \item Which of your listed risks had your team thought of before this
     deliverable, and which did you think of while doing this deliverable? For
     the latter ones (ones you thought of while doing the Hazard Analysis), how
-    did they come about?
+    did they come about?\\\\
+    \textbf{Kyle:} We were aware of risks to the data integrity before this deliverable. We have been thinking to methods to ensure that users are rewarded for being consistently accurate.\\
+    \\ One risk that we discovered during this deliverable was around failures for the system to operate as intended, mostly related to API/ internet failures. Mathew first raised this issue, and
+    as a team we discussed how the system should respond. We decided that if a client disconnects during a labeling session, we should reject labels sent to us after the disconnection and before
+    we can reestablish connection with the user. They may have legitimate labels from this window if the system sends a buffer of images, but there is a risk that a malicious user could prepare 
+    a package of automatically generated fake labels upon reconnection to increase their earnings. This bot activity would be hard to detect and mitigate, so we have decided to be conservative and block all labels
+    made when not actively connected.
+
+
     \item Other than the risk of physical harm (some projects may not have any
     appreciable risks of this form), list at least 2 other types of risk in
-    software products. Why are they important to consider?
+    software products. Why are they important to consider?\\\\
+    \textbf{Kyle:} A big risk is privacy. Users trust us to keep their personal information secure. In the past, the only way a malicious agent could collect so much personal data at one time 
+    would be to break into a public records building. Now, there are thousands (maybe millions) of possible places they could get it. And they only need to find the one weakest link to break in. 
+    It is the responsibility of every software designer to build with security at top of mind. This will ensure that the users are respected and protected.\\\\
+    Also, there is a risk of behaviour modification from the use of software. This is harder to plan for, but after the introduction of software such as social media sites, it is unboubtably present.
+    Misinformation, social isolation, and low-self image have all been in some way attributed to use of social media. The products we build should enhance the lives of the users they are built for
+    and designing a site which exacerbates these symptoms is irresponsible.
 \end{enumerate}
-
+\newpage
 \section{References}
 \sloppy
 
